fix(sonar): pass Quality Gate — clean up 5 new issues and 1 vulnerability